--- a/rca/project_styleguide/templates/patterns/pages/donate/donate.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/donate/donate.yaml
@@ -8,6 +8,7 @@ context:
         depth: 3
         title: Example
     title: Donate
+    form_id: defa0063-24e2-4e3a-a9c0-9a0b28bd72ab
     edit_date: 7 March 2020
     introduction: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
     staff_link: false
